fixed scrollbar (body too tall)

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    #app {
+        @apply max-w-[1280px] justify-center w-full
+    }
+
+    body {
+        @apply flex justify-center w-full h-full
+    }
+}
